# OpcUaHistoryServer

./: .gitignore  build.sh  build_tst.sh
doc/doxygen/: Doxyfile
src/: CMakeLists.txt
src/OpcUaHistory/: CMakeLists.txt
src/OpcUaHistory/Config/: HistoryManager.xml  HistoryModel.xml  HistoryStore.xml  HistoryStoreModel.xml  Opc.Ua.History.NodeSet.xml  OpcUaClientModel.xml  OpcUaHistoryModel.xml  OpcUaServer.xml  OpcUaServerModel.xml
src/OpcUaHistory/History/: ClientConfig.cpp  ConfigBase.cpp  ConfigBase.h  FileHistory.cpp  FileHistory.h  FileHistoryConfig.cpp  FileHistoryConfig.h  FileHistoryStore.cpp  FileHistoryStore.h  FileHistoryStoreConfig.cpp  FileHistoryStoreConfig.h  History.cpp  History.h  HistoryClient.cpp  HistoryClient.h  HistoryClientConfig.cpp  HistoryClientConfig.h  HistoryClientManager.cpp  HistoryClientManager.h  HistoryConfig.cpp  HistoryConfig.h  HistoryManager.cpp  HistoryManager.h  HistoryServer.cpp  HistoryServer.h  HistoryServerConfig.cpp  HistoryServerConfig.h  HistoryServerManager.cpp  HistoryServerManager.h  HistoryStore.cpp  HistoryStore.h  HistoryStoreConfig.cpp  HistoryStoreConfig.h  HistoryStoreIf.h  HistoryStoreModelConfig.cpp  HistoryStoreModelConfig.h  HistoryStoreModelValuesConfig.cpp  HistoryStoreModelValuesConfig.h  OpcUaReferenceConfig.cpp  OpcUaReferenceConfig.h
src/OpcUaHistory/HistoryAccess/: HistoryAccessIf.cpp  HistoryAccessIf.h
src/OpcUaHistory/HistoryAccessFile/: FileAccess.cpp  FileAccess.h  FileIn.cpp  FileIn.h  FileInEntry.cpp  FileInEntry.h  FileManager.cpp  FileManager.h  FileOut.cpp  FileOut.h  FileOutEntry.cpp  FileOutEntry.h  FileOutInfo.cpp  FileOutInfo.h  FileOutManager.cpp  FileOutManager.h  FileReadEntry.cpp  FileReadEntry.h  FileReadManager.cpp  FileReadManager.h  FileWriteEntry.cpp  FileWriteEntry.h  FileWriteManager.cpp  FileWriteManager.h  HistoryAccessFile.cpp  HistoryAccessFile.h
src/OpcUaHistory/Interface/: ApplicationClientConfigIf.h  ApplicationConfigIf.h  ApplicationServerConfigIf.h  ClientConfigIf.h  ConfigIf.h  HistoryStoreIf.h  OpcUaReferenceConfig.cpp  ServerConfigIf.h
src/OpcUaHistory/OpcUaClient/: ClientConfig.cpp  ClientConfig.h  ClientConnection.cpp  ClientConnection.h  ClientMonitoredItem.cpp  ClientMonitoredItem.h  ClientSubscription.cpp  ClientSubscription.h  ConfigBase.cpp  ConfigBase.h  DataChangeFilter.h  HistoryClient.cpp  HistoryClient.h  HistoryClientManager.cpp  HistoryClientManager.h
src/OpcUaHistory/OpcUaServer/: HistoryServer.cpp  HistoryServer.h  HistoryServerManager.cpp  HistoryServerManager.h
src/OpcUaHistory/Utility/: CSV.cpp  CSV.h
src/OpcUaHistory/linux/etc/init/: OpcUaHistory.conf  OpcUaHistory.conf.in
src/OpcUaHistory/linux/etc/init.d/: OpcUaHistory  OpcUaHistory.in
src/OpcUaHistory/linux/script/: postinst  prerm
src/OpcUaHistory/linux/usr/lib/systemd/system/: OpcUaHistory.service  OpcUaHistory.service.in
tst/: CMakeLists.txt  OpcUaStatusCode_t.cpp  unittest.h
tst/HistoryAccessFile/: FileEntry_t.cpp  FileOutEntry_t.cpp  FileReadEntry_t.cpp  FileReadManager_t.cpp  FileWriteEntry_t.cpp  FileWriteManager_t.cpp
tst/scripts/: .gitignore  OpcUaClient_readh.sh  OpcUaClient_readh_csv.sh  OpcUaClient_writeh.sh  OpcUaClient_writeh_csv.sh  TestConfig.sh
tst/scripts/data/: Value:Int16Array.csv  Value:LocalizedTextArray.csv  Value:UInt32.csv
